[project]
name = "adblock"
version = "0.6.0"
description = "Brave's adblocking in Python"
requires-python = ">=3.7"
authors = [{ name = "Árni Dagur", email = "arni@dagur.eu" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry]
requires-poetry = ">=2.0"
name = "adblock"
version = "0.6.0"
description = "Brave's adblocking in Python"
authors = ["Árni Dagur <arni@dagur.eu>"]

[tool.poetry.group.dev.dependencies]
maturin = "*"
pytest = "*"
toml = "*"

[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"
